cmake_minimum_required(VERSION 3.19)
project(cpp_study)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_study main.cpp Object/cpp/Circle.cpp Program/cpp/AddressBook.cpp Program/AddressBook.h Object/Worker.h Object/cpp/Manager.cpp Object/cpp/Employee.cpp Object/cpp/Boss.cpp Program/cpp/WorkerManager.cpp Program/WorkerManager.h Object/Speaker.h Program/cpp/SpeechManager.cpp Program/SpeechManager.h Object/ComputerRoom.h Object/Identity.h Const/computerRoomFile.h Object/cpp/ComputerManager.cpp Object/ComputerManager.h Object/cpp/Student.cpp Object/Student.h Object/cpp/OrderFile.cpp Object/OrderFile.h Object/cpp/Teacher.cpp Object/Teacher.h Program/cpp/ComputerRoomReservation.cpp Program/ComputerRoomReservation.h)