cmake_minimum_required(VERSION 3.19)
project(cpp_study)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_study main.cpp object/cpp/Circle.cpp program/cpp/addressBook.cpp program/addressBook.h object/Worker.h object/cpp/Manager.cpp object/cpp/Employee.cpp object/cpp/Boss.cpp program/cpp/WorkerManager.cpp program/WorkerManager.h object/Speaker.h program/cpp/SpeechManager.cpp program/SpeechManager.h object/ComputerRoom.h object/Identity.h const/computerRoomFile.h object/cpp/ComputerManager.cpp object/ComputerManager.h object/cpp/Student.cpp object/Student.h object/cpp/OrderFile.cpp object/OrderFile.h object/cpp/Teacher.cpp object/Teacher.h program/cpp/ComputerRoomReservation.cpp program/ComputerRoomReservation.h)